[gd_scene load_steps=6 format=3 uid="uid://c0d82otwxx4am"]

[ext_resource type="Script" path="res://village/house_project.gd" id="1_lakpe"]
[ext_resource type="PackedScene" uid="uid://btdvbqb88iw8k" path="res://village/house_1.glb" id="2_q18p8"]
[ext_resource type="PackedScene" uid="uid://p474jpk1l85a" path="res://village/bed.glb" id="4_q0cc5"]
[ext_resource type="PackedScene" uid="uid://bxxh0oo3yo878" path="res://village/planks.glb" id="5_gsain"]

[sub_resource type="BoxShape3D" id="BoxShape3D_w15qg"]
size = Vector3(2.08009, 1, 2.89447)

[node name="house" type="Node3D"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
script = ExtResource("1_lakpe")

[node name="house_1" parent="." instance=ExtResource("2_q18p8")]

[node name="house" parent="house_1" index="0"]
transparency = 1.0

[node name="roof " parent="house_1" index="1"]
transparency = 1.0

[node name="StaticBody3D" parent="house_1/roof " index="0"]
collision_layer = 256

[node name="house " parent="house_1" index="2" groups=["navigation_mesh_group"]]
collision_layer = 256

[node name="floor " parent="house_1" index="3"]
transparency = 1.0

[node name="StaticBody3D" parent="house_1/floor " index="0"]
collision_layer = 256
collision_mask = 16

[node name="door_open_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.34876)
collision_layer = 256
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_open_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0963521, 0, -0.0147398)
shape = SubResource("BoxShape3D_w15qg")

[node name="planks" type="Node3D" parent="."]

[node name="planks" parent="planks" instance=ExtResource("5_gsain")]
transform = Transform3D(0.96837, 0, -0.249518, 0, 1, 0, 0.249518, 0, 0.96837, 0.51247, 0, 2.64085)
visible = false

[node name="planks2" parent="planks" instance=ExtResource("5_gsain")]
transform = Transform3D(0.631055, 0, -0.775738, 0, 1, 0, 0.775738, 0, 0.631055, 1.08704, 0, 0.931214)
visible = false

[node name="planks3" parent="planks" instance=ExtResource("5_gsain")]
transform = Transform3D(0.579011, 0, 0.81532, 0, 1, 0, -0.81532, 0, 0.579011, 0, 0, 0.404559)
visible = false

[node name="planks4" parent="planks" instance=ExtResource("5_gsain")]
transform = Transform3D(0.591971, 0, 0.805959, 0, 1, 0, -0.805959, 0, 0.591971, -1.52706, 0, 1.15907)
visible = false

[node name="planks5" parent="planks" instance=ExtResource("5_gsain")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.60104)
visible = false

[node name="bed" parent="." instance=ExtResource("4_q0cc5")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
visible = false

[editable path="house_1"]
