[gd_scene load_steps=4 format=3 uid="uid://c0d82otwxx4am"]

[ext_resource type="Script" path="res://village/house_project.gd" id="1_ipbun"]
[ext_resource type="PackedScene" uid="uid://bpbv6q0l50ts3" path="res://village/house_project_1.glb" id="2_h5tu1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xff1w"]
size = Vector3(4, 2, 5.79578)

[node name="house_project" type="StaticBody3D"]
script = ExtResource("1_ipbun")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01851, -0.0165405)
shape = SubResource("BoxShape3D_xff1w")

[node name="house_project_1" parent="." instance=ExtResource("2_h5tu1")]

[node name="house_project" parent="house_project_1" index="0"]
transparency = 1.0

[editable path="house_project_1"]
